# vm

./: Cargo.toml  readme.md
.github/workflows/: test.yml
bytecode/: Cargo.toml
bytecode/src/: assembler.rs  lib.rs  main.rs  opcode.rs  parser.rs
src/: error.rs  frame.rs  function.rs  lib.rs  machine.rs  main.rs  object.rs  object_info.rs  object_pool.rs  opcodes.rs  static_root.rs  string.rs  value.rs
src/jit/cpu/: mod.rs
src/jit/cpu/universal/: param.rs  reg.rs
